feat(wire-server): self-contained embedding uberjar + loud --preflight
Build a third party can `java -jar` with NO Seon source checkout to run the
embedding-backed wire-server.

- build.clj: new `writer-uber` target off the `:writer` basis (own basis +
  class-dir, not the file globals). Bakes src-secondary Proximum source, the
  konserve-shim META-INF, the datahike prep output, and the proximum/genai
  jars into target/seon-wire-server-standalone.jar (Main-Class seon.server.boot,
  103M). Kills the submodule, prep, shim, and SHA-GC friction for the consumer
  in one artifact.
- seon.embed.preflight: loud self-check with DISTINCT non-zero exit codes per
  silent-degrade mode — 10 Java<22/no jdk.incubator.vector, 11 SEON_EMBED unset,
  12 GEMINI_API_KEY blank, 13 embed-text round-trip != 1536-vec, 14 install!+
  one-row KNN top-1 self-test miss. Self-test runs against a throwaway :memory
  conn (never the durable cluster store).
- wire/parse-args: `--preflight` flag (no longer exit-2s on it).
- boot/-main: intercepts --preflight, runs the check, System/exit with its code.

Verified from the jar (JDK 22): --preflight exits 11 (SEON_EMBED unset) / 12
(key unset) loudly; a key-unset normal boot starts the wire-server, creates the
Proximum index (proves :proximum registered at jar runtime), and accepts
schema+data writes read back via query with zero Gemini activity. Gemini
round-trip + KNN top-1 gates (codes 13/14) need a GEMINI_API_KEY to exercise.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>